[package]
name = "relay-thin"
version = "0.1.0"
authors = ["Michał Sidor <public+git@meekchopp.es>"]
edition = "2018"

[dependencies]
failure = "0.1.8"
relay-auth = { path = "../relay-auth" }
relay-config = { path = "../relay-config" }
relay-log = { path = "../relay-log", features = ["init"] }
relay-server = { path = "../relay-server", features = ["ssl"] }
